overflow fixed

--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -47,7 +47,7 @@ body {
 
 
 @keyframes slide {
-    50% {
+    49% {
         transform: translateX(-100vw);
         animation-timing-function: steps(1, end);
     }
